[tool.poetry]
name = "showandtell"
version = "0.1.0"
description = ""
authors = ["elad <eladr@post.bgu.ac.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
